# This file is part of avahi.
#
# avahi is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# avahi is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with avahi; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
# USA.

nobase_include_HEADERS = \
	avahi/strlst.h \
	avahi/address.h \
	avahi/alternative.h \
	avahi/domain.h \
	avahi/cdecl.h \
	avahi/defs.h \
	avahi/malloc.h \
	avahi/watch.h \
	avahi/timeval.h \
	avahi/simple-watch.h \
	avahi/thread-watch.h \
	avahi/gccmacro.h \
	avahi/error.h \
	avahi/llist.h \
	avahi/rlist.h \
	avahi/core.h \
	avahi/log.h \
	avahi/rr.h \
	avahi/publish.h \
	avahi/lookup.h
