# This file is part of catta.
#
# catta is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation; either version 2 of the
# License, or (at your option) any later version.
#
# catta is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
# or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public
# License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with catta; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
# USA.

nobase_include_HEADERS = \
	catta/strlst.h \
	catta/address.h \
	catta/alternative.h \
	catta/domain.h \
	catta/cdecl.h \
	catta/defs.h \
	catta/malloc.h \
	catta/watch.h \
	catta/timeval.h \
	catta/simple-watch.h \
	catta/thread-watch.h \
	catta/gccmacro.h \
	catta/error.h \
	catta/llist.h \
	catta/rlist.h \
	catta/core.h \
	catta/log.h \
	catta/rr.h \
	catta/publish.h \
	catta/lookup.h \
	catta/compat/wincompat.h \
	catta/compat/windows/arpa/inet.h \
	catta/compat/windows/net/if.h \
	catta/compat/windows/netinet/in.h \
	catta/compat/windows/sys/ioctl.h \
	catta/compat/windows/sys/poll.h \
	catta/compat/windows/sys/select.h \
	catta/compat/windows/sys/socket.h \
	catta/compat/windows/sys/uio.h \
	catta/compat/windows/sys/utsname.h
